# Feature or Bug Fix Issue 174: Handle folder rename/restore cases more judiciously Issue 113: Connector fails to detect changes if there is a huge gap in the activity on the SharePoint Server, goes into an infinite loop.
# High level list of changes
-- Created the following class for representing SharePoint folder information. All folder related references in all other classes are updated to make use of this.
/sharepoint_trunk/source/java/com/google/enterprise/connector/sharepoint/state/Folder.java

-- Makes important use of Folder objects to decide from where the crawl should resume inside a list when last batch traversal was stopped in between while discovering documents under renamed/restored folders..
/sharepoint_trunk/source/java/com/google/enterprise/connector/sharepoint/wsclient/ListsWS.java

-- Instead of just FolderLevel, both FolderPath and FolderId is persisted in state file. The change has been done respecting the backward compatibility.
/sharepoint_trunk/source/java/com/google/enterprise/connector/sharepoint/state/GlobalState.java
/sharepoint_trunk/source/java/com/google/enterprise/connector/sharepoint/state/ListState.java

-- Logging and other miscellaneous changes
/sharepoint_trunk/source/java/com/google/enterprise/connector/sharepoint/client/SharepointClient.java
/sharepoint_trunk/source/java/com/google/enterprise/connector/sharepoint/client/SPConstants.java
/sharepoint_trunk/source/java/com/google/enterprise/connector/sharepoint/spiimpl/SharepointTraversalManager.java
/sharepoint_trunk/source/java/com/google/enterprise/connector/sharepoint/spiimpl/SPDocument.java
/sharepoint_trunk/source/java/com/google/enterprise/connector/sharepoint/wsclient/SiteDataWS.java

-- JUnits
/sharepoint_trunk/source/javatests/com/google/enterprise/connector/sharepoint/TestConfiguration.java
/sharepoint_trunk/source/javatests/com/google/enterprise/connector/sharepoint/state/GlobalStateTest.java
/sharepoint_trunk/source/javatests/com/google/enterprise/connector/sharepoint